# Magic-Circle-System

./: .gitignore  DESIGN.md  README.md  Visual Rework.md  brain.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
docs/: artifacts_manifest.md  magic_system_v2_2_implementation.md  playtest_feedback_2026-06-05.md
docs/glyphs/: glyph_sheet_viewer_seed.html  svg_template_authoring.md
docs/research/: free_draw_magic_recognition.md  tcg_mvp_plan.md
ml/: pyproject.toml
ml/glyph_ml/: __init__.py  config.py  export_onnx.py  generate_dataset.py  model.py  rasterizer.py  train.py  verify.py
scripts/: build-pages.mjs  ml-browser-smoke.mjs
src/: App.css  App.tsx  index.css
src/components/: BattleSceneShell.tsx  CodexBook.regression-001.test.ts  CodexBook.tsx  CodexPanel.tsx  EnemyCastPreview.tsx  GameCanvas.tsx  GlyphCollectorPanel.tsx  GlyphDebugPanel.tsx  GlyphTemplatePreview.tsx  GrimoirePanel.tsx  GuidePanel.tsx  GuidePanelV2.tsx  MagicVfxLayer.tsx  MandalaDebugPanelV2.tsx  MandalaSummaryPanel.tsx  PerfectGlyphPreview.tsx  PrecisionDetails.tsx  SpellEffect.tsx
src/data/: activeRuneCatalog.ts  glyphTemplates.seed.json  glyphTemplates.ts  magicCatalogV2.seed.json  magicCatalogV2.ts  magicOntology.test.ts  magicOntology.ts  magicRunesV2.seed.json  spellRecipes.ts
src/hooks/: useParticles.ts
src/lib/: magicSystem.ts  spellEngine.ts
src/pages/: Home.tsx
src/types/: codex.ts  glyphTemplates.ts  ink.ts  magic.ts  magicFormulaV2.ts  mandala.ts  recognition.ts  spellCard.ts  spellFormula.ts  spellGraph.ts  (+1 more)
(+81 files in other folders)
