[project]
name = "magic-glyph-ml"
version = "0.1.0"
description = "Training and ONNX export pipeline for the Magic Circle glyph recognizer."
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=2.1,<3",
  "onnx>=1.17,<2",
  "onnxruntime>=1.20,<2",
  "onnxscript>=0.2,<1",
  "torch>=2.6,<3",
  "torchvision>=0.21,<1",
]

[project.scripts]
glyph-ml-generate = "glyph_ml.generate_dataset:main"
glyph-ml-train = "glyph_ml.train:main"
glyph-ml-export = "glyph_ml.export_onnx:main"
glyph-ml-verify = "glyph_ml.verify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glyph_ml"]
